# GemTrack-v0.5.0

./: README.md  main2.py  pyproject.toml  requirements.txt
components/: inventory_product_card.py  navigation_card.py  navigation_card2.py  product_card.py
controllers/: inventory_controller.py
data/: crud_operations.py  database.py  gemtrack.db  utils.py
data/models/: base_model.py  product_models.py  supplier_models.py  user_models.py
repos/: category_repo.py  client_repo.py  product_repo.py  supplier_repo.py  user_repo.py
services/: category_service.py  client_service.py  product_service.py  search.py  supplier_service.py  user_service.py
test/: test_database.py
test/UI_Experiment/: Extreme Adaptative.py  extreme_adaptative2.py  filepicker_example1.py  filepicker_example2.py
views/: dashboard_view4.py  inventory_crud_view.py  inventory_main_view.py  inventory_view2.py  product_add_view.py  product_form_view.py
